2005-08-25  Sam Steingold  <sds@gnu.org>

	* errunix.d, errwin32.d (errno_out): print newline beforehand
	* lispbibl.d (errno_out) [DEBUG_OS_ERROR]: print file:line
	* error.d: #undef errno_out
	* spvw_memfile.d (loadmem): do not print newline before errno_out()
	* spvw_mmap.d (mmap_zeromap): ditto
	* spvw_multimap.d (fdmap): ditto

2005-08-25  Sam Steingold  <sds@gnu.org>

	* makemake.in: do note create rules for development targets
	unless the user is working from the CVS

2005-08-25  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/configure.in, modules/syscalls/calls.c:
	assume <sys/types.h> exists, just like in unix.d

2005-08-25  Sam Steingold  <sds@gnu.org>

	* unixaux.d (close_all_fd): also try getrlimit() before OPEN_MAX
	* unix.d: include <time.h> and <sys/time.h> as recommended by the
	autoconf manual (see AC_HEADER_TIME); include <sys/resource.h>
	* configure.in: call AC_CHECK_FUNCS and AC_CHECK_HEADERS just once;
	use AC_HEADER_TIME to check for <time.h> and <sys/time.h>

2005-08-25  Sam Steingold  <sds@gnu.org>

	* m4/regex.m4, modules/regexp/regcomp.c, modules/regexp/regex.h:
	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h:
	* modules/regexp/regexec.c, modules/regexp/regex.c: sync with gnulib
	* modules/regexp/configure.in: add AC_GNU_SOURCE,
	use gl_REGEX instead of gl_INCLUDED_REGEX

2005-08-25  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/autoconf/aclocal.m4): prepend AC_GNU_SOURCE
	to configure.ac and strip it from configures
	Suggested by Stepan Kasal <kasal@ucw.cz> in
	http://article.gmane.org/gmane.comp.lib.gnulib.bugs:4165

2005-08-24  Sam Steingold  <sds@gnu.org>

	explicitly close all file descriptors before exec()
	* socket.d (connect_to_x_server): do not set FD_CLOEXEC
	* configure.in: check for sysconf and
	* unixaux.d (close_all_fd): new function
	* unix.d (close_all_fd): declare it
	* stream.d (create_input_pipe, create_output_pipe, create_io_pipe):
	call it before execl()